[package]
name = "markdown_query"
version = "0.3.0"
authors = ["Steve Sosik <steve@little-fluffy.cloud>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "mdq"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = "2.33.3"
color-eyre = "0.5.11"
dirs = "1.0.4"
eyre = "0.6.5"
frontmatter = "0.4.0"
glob = "0.3.0"
markdown-fm-doc = { git = "https://github.com/ssosik/markdown-fm-doc" }
nom = "6.2.1"
nom_locate = "3.0.2"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
serde_yaml = "0.8.13"
shellexpand = "1.0.0"
termion = "1.5"
tui = "0.15"
unicode-width = "0.1"
walkdir = "2.3.2"
xapian-rusty = { version = "0.1.3", path = "xapian-rusty" }
uuid = { version = "0.8", features = ["v4", "serde"] }
uuid-b64 = "0.1.1"
yaml-rust = "0.4"
